--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -21,10 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "cfb0c761",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-14 19:33:01.625063: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -33,7 +42,7 @@
     "from collections import Counter\n",
     "from itertools import chain\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras.layers import Dense, Embedding, Input, Lambda, Reshape\n",
+    "from tensorflow.keras.layers import Dense, Embedding, Input, Lambda, Layer, Reshape\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer"
@@ -770,72 +779,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "e00bc2d3-00eb-46f0-8b44-e3f08e832cd7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Tensor_Mean_Pooling(keepdims=False, mask=None):\n",
-    "    return Lambda(lambda x: tf.reduce_mean(x, axis=1, keepdims=keepdims), mask=mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 138,
    "id": "aea09bd7-970e-427a-9326-69c99f5e157a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Tensor_Mean_Pooling2(keepdims=False, mask=None):\n",
-    "    def masked_zero_mean(tensor):\n",
-    "        return tf.reduce_sum(tensor)/tf.reduce_sum(mask)\n",
-    "    return Lambda(masked_zero_mean, mask=mask)"
+    "class Tensor_Mean_Pooling(tf.keras.layers.Layer):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "\n",
+    "    def call(self, tensor, mask=None):\n",
+    "        tensor = tf.reshape(tensor, [1, 3])\n",
+    "        mask = tf.cast(mask, tensor.dtype)\n",
+    "        masked_tensor = tf.multiply(tensor, mask)\n",
+    "        masked_sum = tf.reduce_sum(masked_tensor)\n",
+    "        valid_count = tf.reduce_sum(mask)\n",
+    "        division = tf.math.divide(masked_sum, valid_count)\n",
+    "        return division"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 139,
    "id": "2c566a0c-5320-43fc-8298-18b8aa661c46",
    "metadata": {},
    "outputs": [],
    "source": [
     "genres = Input((3,))\n",
-    "embed_genres = Embedding(19, 1, mask_zero=True)\n",
-    "embedded_genres = embed_genres(genres)\n",
-    "#res = embedded_genres._keras_mask"
+    "embedded_genres = Embedding(19, 1, mask_zero=True)(genres)\n",
+    "mask = embedded_genres._keras_mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "f06f9a10-73d6-426a-9738-97d6c866b196",
+   "execution_count": 142,
+   "id": "eee2aef4-7f69-464f-b540-3cecbf980535",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bluraygun/Documents/tfg/tflow/lib/python3.10/site-packages/keras/src/layers/layer.py:877: UserWarning: Layer 'tensor__mean__pooling_1' (of type Tensor_Mean_Pooling) was passed an input with a mask attached to it. However, this layer does not support masking and will therefore destroy the mask information. Downstream layers will not see the mask.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "tmp = Tensor_Mean_Pooling(mask=embed_genres.compute_mask(genres))(embedded_genres)\n",
+    "tmp = Tensor_Mean_Pooling()(embedded_genres, mask)\n",
     "model = Model(inputs=genres, outputs=tmp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "a2ad3d36-019f-4f00-b005-12c28ae314d0",
+   "execution_count": 143,
+   "id": "e195e8ab-c724-4bbb-9483-75aaabd13d26",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.03916447]], dtype=float32)"
+       "-0.038320053"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,24 +860,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "9bd6dce1-7b0b-4291-9cc2-97e616a63738",
+   "execution_count": 144,
+   "id": "6a4d7f7d-2088-4b56-a8eb-2d2541999e70",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 19ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.04070656]], dtype=float32)"
+       "-0.038320053"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,29 +888,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f28355f6-c44d-4373-a640-f3a42912d48d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.020458236666666667"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([0.03168437, -0.01888443, 0.04857477]).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "eee2aef4-7f69-464f-b540-3cecbf980535",
+   "id": "114d78db-986a-40e7-80ae-47dceab0d698",
    "metadata": {},
    "outputs": [],
    "source": []
