--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -746,6 +746,7 @@
     "\n",
     "    def call(self, inputs, mask):\n",
     "        tf.print(\"inputs:\", inputs)\n",
+    "        #PROVAR AMB 2 UNICS INPUTS A L'ULTIMA CEL·LA I ANAR MIRANT\n",
     "        #tensor = tf.reshape(inputs, [1, 3])\n",
     "        mask = tf.cast(mask, inputs.dtype)\n",
     "        tf.print(\"mask:\", mask)\n",
